# quenn-retro

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
app/: Cargo.toml
app/src/: constants.rs  dtos.rs  errors.rs  extractors.rs  handlers.rs  lib.rs  main.rs  routes.rs  services.rs
app/src/constants/: cookies.rs
app/src/constants/environment_variables/: database.rs  server.rs
app/src/dtos/: global.rs  health.rs  note.rs  room.rs  upvote.rs
app/src/dtos/global/: error_response.rs  success_response.rs
app/src/dtos/health/: health_response.rs
app/src/dtos/note/: create_note_request.rs  create_note_response.rs  update_note_request.rs  update_note_response.rs
app/src/dtos/room/: create_room_request.rs  create_room_response.rs  find_all_room_query.rs  get_room_response.rs  update_room_request.rs  update_room_response.rs
app/src/dtos/upvote/: create_upvote_request.rs  create_upvote_response.rs
app/src/entities/: mod.rs  notes.rs  prelude.rs  rooms.rs  sea_orm_active_enums.rs  upvotes.rs
app/src/extractors/: pagination.rs  user_id.rs
app/src/handlers/: health.rs  note.rs  room.rs  upvote.rs
app/src/repositories/: note.rs  room.rs  upvote.rs
app/src/routes/: health.rs  note.rs  room.rs  upvote.rs
app/src/services/: note.rs  room.rs  upvote.rs
migration/src/: lib.rs  m20250907_130748_create_rooms_table.rs  m20250914_122720_create_notes_table.rs  m20250920_133412_add_user_id_to_notes.rs  m20250920_154128_create_upvotes_table.rs
